[package]
name = "packetcrypt"
version = "0.5.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
license = "LGPL-2.1-only OR LGPL-3.0-only"
description = """
PacketCrypt proof of work algorithm
"""

[dev-dependencies]
hex-literal = "0.3"
env_logger = "0.7"
structopt = "0.3"
tokio = { version = "1.12.0", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }

[dependencies]
git-version = "0.3"
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
toml = "0.5"
anyhow = "1.0"
packetcrypt-sprayer = { version = "0.4", path = "packetcrypt-sprayer" }
packetcrypt-sys = { version = "0.4", path = "packetcrypt-sys" }
packetcrypt-util = { version = "0.4", path = "packetcrypt-util" }
packetcrypt-pool = { version = "0.4", path = "packetcrypt-pool" }
packetcrypt-annmine = { version = "0.4", path = "packetcrypt-annmine" }
packetcrypt-blkmine = { version = "0.4", path = "packetcrypt-blkmine" }
packetcrypt-annhandler = { version = "0.4", path = "packetcrypt-annhandler" }
fast-socks5 = { version = "0.5", path = "fast-socks5" }
crossbeam-channel = "0.4"
thiserror = "1.0"
tokio-stream = "0.1.7"
log = "0.4"
clap = "2.33"
num_cpus = "1.13"
leak-detect-allocator = { version = "0.1", git = "https://github.com/cjdelisle/leak-detect-allocator", rev = "f8bcc56fdeb5ef74ed228e41fd6195dd2f368a90", optional = true }
jemallocator = { version = "0.3.2", optional = true }

[features]
leak_detect = ["leak-detect-allocator"]
jemalloc = ["jemallocator"]
portable = ["packetcrypt-sys/portable"]

[profile.release]
# lto = "fat" # takes ages
# codegen-units = 1
panic = "abort"
# debug = true # huge bin
